# RemoteListener

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-fuzz.yml  ci-ios.yml  ci-rust.yml  ci-stress.yml
crates/rl-audio/: Cargo.toml
crates/rl-audio/src/: capture.rs  channel.rs  decoder.rs  encoder.rs  engine.rs  lib.rs  recorder.rs
crates/rl-core/: Cargo.toml  build.rs
crates/rl-core/src/: config.rs  device_id.rs  lib.rs
crates/rl-crypto/: Cargo.toml
crates/rl-crypto/src/: decrypt.rs  encrypt.rs  format.rs  key.rs  key_export.rs  lib.rs
crates/rl-discovery/: Cargo.toml  Dockerfile
crates/rl-discovery/src/: lib.rs
crates/rl-net/: Cargo.toml
crates/rl-net/src/: connection.rs  frame.rs  lib.rs  tls.rs  transport.rs
crates/rl-testtool/: Cargo.toml
crates/rl-testtool/src/: main.rs
crates/rl-transmitter/: Cargo.toml
crates/rl-transmitter/src/: discovery.rs  lib.rs  main.rs  relay.rs  server.rs  upnp.rs
crates/rl-tray/: Cargo.toml
crates/rl-tray/src/: lib.rs  tray.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: key_transfer_blob.rs  proto_decode.rs  recording_file_parse.rs  rlp_frame_parse.rs
proto/: rl_protocol.proto
receiver/: project.yml
receiver/RLKit/: Package.swift
receiver/RLKit/Sources/RLKit/: BonjourBrowser.swift  DiscoveryService.swift  MessageType.swift  OpusDecoder.swift  RLKit.swift  TransmitterConnection.swift  TransmitterStore.swift
receiver/RLKit/Tests/RLKitTests/: RLKitTests.swift
receiver/RemoteListener.xcodeproj/: project.pbxproj
receiver/RemoteListener.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
receiver/RemoteListener/App/: RemoteListenerApp.swift
receiver/RemoteListener/Services/: AudioPlayerService.swift  CryptoService.swift  KeychainService.swift  LibOpusBridge.swift  NetworkService.swift  rl_opus_bridge.c
receiver/RemoteListener/Views/: KeyTransferView.swift  LiveListenView.swift  PairingView.swift  RecordingsView.swift  SettingsView.swift  TransmitterDetailView.swift  TransmittersView.swift
