[package]
name = "rl-audio"
version.workspace = true
edition.workspace = true

[dependencies]
rl-core = { path = "../rl-core" }
rl-crypto = { path = "../rl-crypto" }
cpal = { workspace = true }
opus = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
