[package]
name = "rl-discovery"
version.workspace = true
edition.workspace = true

[dependencies]
rl-core = { path = "../rl-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1"
reqwest = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "rl-discovery-server"
path = "src/bin/server.rs"

[lib]
name = "rl_discovery"
path = "src/lib.rs"
