[package]
name = "rl-testtool"
version.workspace = true
edition.workspace = true

[dependencies]
rl-core = { path = "../rl-core" }
rl-crypto = { path = "../rl-crypto" }
rl-net = { path = "../rl-net" }
rl-audio = { path = "../rl-audio" }
clap = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = "7"

[[bin]]
name = "rl-testtool"
path = "src/main.rs"
