[package]
name = "rl-transmitter"
version.workspace = true
edition.workspace = true

[dependencies]
rl-core = { path = "../rl-core" }
rl-audio = { path = "../rl-audio" }
rl-crypto = { path = "../rl-crypto" }
rl-net = { path = "../rl-net" }
rl-tray = { path = "../rl-tray" }
rl-discovery = { path = "../rl-discovery" }
mdns-sd = { workspace = true }
igd-next = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "rl_transmitter"
path = "src/lib.rs"

[[bin]]
name = "rl-transmitter"
path = "src/main.rs"
